--- a/index.html
+++ b/index.html
@@ -1,23 +1,167 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/style.css">
 
     <title>Hello, world!</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Hello, world!</h1>
-    </div>
+    <header class="header">
+      <div class="header__grad-block"></div>
+      <div class="container">
+        <div class="row">
+          <div class="offset-lg-1 col-lg-11">
+            <div class="row">
+              <div class="col-lg-7">
+                <h1 class="white-text header__title">Как научиться одеваться со вкусом и создавать яркое впечатление</h1>
+                <hr>
+                <p class="header__description white-text">Как создать индивидуальный стиль, подчеркнуть свои достоинства и создавать А*уенное первое впечатление Превосходное, Потрясающее, Шикарное, Безупречное</p>
+              </div>
+              <div class="col-lg-4"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="header__white-block">
+        <div class="container">
+          <div class="row">
+            <div class="offset-lg-1 col-lg-10">
+              <div class="row">
+                <div class="col-lg-12">
+                  <p class="right black-text header__days">3-х дневный мужской интенсив</p>
+                  <h2 class="center">Как создать свой стильный образ<br><span class="white-text">привлекательного и успешного мужчины</span></h2>
+                  <hr style="max-width: 80%; margin-left: auto; margin-right: auto;">
+                  <p class="center header__text">научись создавать свой собственный образ БЕЗ привлечения стилиста, и траты 10-ки часов на выбор одежды</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <section class="deadlines">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="row">
+              <div class="col-lg-6">
+                <div class="deadlines__date center">5-7 ноября</div>
+                <div class="deadlines__button center">
+                  <a href="#" class="button">принять участие в Интенсиве</a>
+                </div>
+                <p class="uppercase deadlines__text center">Свободно 245 / 300 <span class="lowercase">мест</span></p>
+                <div class="deadlines__progress">
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item active"></div>
+                  <div class="deadlines__progress-item"></div>
+                  <div class="deadlines__progress-item"></div>
+                  <div class="deadlines__progress-item"></div>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="row">
+                  <div class="col-lg-6">
+                    <div class="deadlines__photo gray-bg margin">
+                      <img src="img/user1.png" alt="user">
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="deadlines__photo yellow-bg">
+                      <img src="img/user2.png" alt="user">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="problems">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-11 offset-lg-1">
+            <div class="row">
+
+                <h2 class="problems__title center">
+                  Интенсив для Вас,
+                  <span class="yellow-text">если Вы сталкиваетесь с такими проблемами</span>
+                </h2>
+                <div class="row">
+                  <div class="col-lg-6">
+                    <div class="problems__item">
+                      <i class="icon"></i>
+                      <p class="problems__text">Девушки не обращают желаемого внимания на вас</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="problems__item">
+                      <i class="icon"></i>
+                      <p class="problems__text">Шопинг в тягость и не приносит удовольствия</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="problems__item">
+                      <i class="icon"></i>
+                      <p class="problems__text">Тратите деньги на одежду и не носите ее</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="problems__item">
+                      <i class="icon"></i>
+                      <p class="problems__text">Ваша одежда даёт противоположный эффект на встречах  </p>
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="problems__item">
+                      <i class="icon"></i>
+                      <p class="problems__text">Не хватает времени на походы по магазинам</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="problems__item">
+                      <i class="icon"></i>
+                      <p class="problems__text">Не знаете, как правильно подобрать и сочетать одежду</p>
+                    </div>
+                  </div>
+                </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
