--- a/index.html
+++ b/index.html
@@ -109,7 +109,6 @@
         <div class="row">
           <div class="col-lg-11 offset-lg-1">
             <div class="row">
-
                 <h2 class="problems__title center">
                   Интенсив для Вас,
                   <span class="yellow-text">если Вы сталкиваетесь с такими проблемами</span>
@@ -152,7 +151,194 @@
                     </div>
                   </div>
                 </div>
-
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="check-list">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-11 offset-lg-1">
+            <div class="row">
+              <h2 class="center">
+                Перед началом интенсива - настоятельно
+                <span class="yellow-text">рекомендую изучить мой чек лист</span>
+              </h2>
+              <div class="row">
+                <div class="col-lg-4">
+                  <img src="img/book.png" alt="book">
+                </div>
+                <div class="col-lg-6">
+                  <p>"9 проблем в создании СТИЛЬНОГО мужского образа, КОТОРЫЕ до сих пор отталкивают от вас людей"</p>
+                  <ul>
+                    <li>Я не сторонник раздавать свой материал БЕСПЛАТНО. Но подарив чек лист вам - мы сэкономим время в прямом эфире.</li>
+                    <li>PDF чек лист - я отдаю вам бесплатно, чтобы в прямом эфире на это не уделять время.</li>
+                  </ul>
+                  <div class="check-list__btn">
+                    <a href="#" class="button check-list__button">скачать PDF и
+                      зарегистрироваться на интенсив</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="result">
+      <div class="result__dark"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-11 offset-lg-1">
+            <div class="row">
+              <h2 class="center white-text">
+                Результат после <span class="yellow-text">прохождения интенсива</span>
+              </h2>
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="result__item white-text">
+                    <p>Освоите базовые принципы стиля, комбинирования одежды,
+                      подбора аксессуаров</p>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="result__item white-text">
+                    <p>Узнаете как привлекать с первых
+                      секунд внимание и интерес у женщин
+                      своим внешним видом</p>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="result__item white-text">
+                    <p>Узнаете как вызывать расположение
+                      и уважение партнёров, коллег и друзей
+                      своим внешним видом</p>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="result__item white-text">
+                    <p>Научитесь грамотно подбирать
+                      вещи под себя и при этом не выходить
+                      за рамки бюджета.  </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="interest">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-11 offset-lg-1">
+            <div class="row">
+              <h2 class="center">Кому интенсив будет <span class="yellow-text">не интересен?</span></h2>
+                <div class="col-lg-12">
+                  <div class="interest__item">
+                    <div class="interest__desc"><p>Если Вы
+                      старше 45</p>
+                      <i class="icon interest__icon"></i>
+                    </div>
+                    <p class="interest__text">Если вы предприниматель, собственник или топ менеджер и вам больше 45, то Вам интенсив будет полезен со стороны изучения основ и базовых элементов. Для создания конкретных образов - я работаю индивидуально. Вы можете написать мне на почту.</p>
+                  </div>
+                </div>
+                <div class="col-lg-12">
+                  <div class="interest__item">
+                    <div class="interest__desc"><p>Вы стилист и
+                      сами знаете
+                      как надо :)</p>
+                      <i class="icon interest__icon"></i>
+                    </div>
+                    <p class="interest__text">В этом случае, интенсив будет полезен Вам с точки зрения получения нового опыта. Я сам регулярно слежу за своими коллегами для расширения своего видения.</p>
+                  </div>
+                </div>
+                <div class="col-lg-12">
+                  <div class="interest__item">
+                    <div class="interest__desc"><p>Вы фрик. Вы так
+                      самовыражаетесь</p>
+                      <i class="icon interest__icon"></i>
+                    </div>
+                    <p class="interest__text">И имеете полное право на это. Но мое личное мнение - одежда для мужчины это просто фон его личностным качествам и поступкам. Важно, чтобы фон был хороший. При создании уникальных стилий - нужно применять другие правила. На интенсиве мы будем говорить о стииле со вкусом, но не о создании УНИКАЛЬНЫХ и ЭПАТАЖНЫХ ОБРАЗОВ.</p>
+                  </div>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="program">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <h2 class="center">Что будет на Интенсиве?
+              <span class="yellow-text uppercase">программа</span>
+            </h2>
+            <div class="row">
+              <div class="col-lg-4">
+                <div class="program__item">
+                  <div class="program__date">День 1 / <span class="yellow-text">5 ноября</span></div>
+                  <div class="program__timing-wrap">
+                    <div class="program__timing">Тайминг: 1 час</div>
+                    <ul>
+                      <li>Постановка целей в образе под вашу ситуацию</li>
+                      <li>Образ успешного мужчины. Какие составляющие?</li>
+                      <li>Главные враги стиля: СМИ и магазины. На что ориентироваться?</li>
+                    </ul>
+                    <div class="program__result">
+                      <p>
+                        РЕЗУЛЬТАТ:
+                        Вы узнаете, как создать образ успешного мужчины; какие вещи обязаны быть в вашем гардеробе, а какие - обходить стороной.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="program__item">
+                  <div class="program__date">День 1 / <span class="yellow-text">5 ноября</span></div>
+                  <div class="program__timing-wrap">
+                    <div class="program__timing">Тайминг: 1 час</div>
+                    <ul>
+                      <li>Постановка целей в образе под вашу ситуацию</li>
+                      <li>Образ успешного мужчины. Какие составляющие?</li>
+                      <li>Главные враги стиля: СМИ и магазины. На что ориентироваться?</li>
+                    </ul>
+                    <div class="program__result">
+                      <p>
+                        РЕЗУЛЬТАТ:
+                        Вы узнаете, как создать образ успешного мужчины; какие вещи обязаны быть в вашем гардеробе, а какие - обходить стороной.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="program__item">
+                  <div class="program__date">День 1 / <span class="yellow-text">5 ноября</span></div>
+                  <div class="program__timing-wrap">
+                    <div class="program__timing">Тайминг: 1 час</div>
+                    <ul>
+                      <li>Постановка целей в образе под вашу ситуацию</li>
+                      <li>Образ успешного мужчины. Какие составляющие?</li>
+                      <li>Главные враги стиля: СМИ и магазины. На что ориентироваться?</li>
+                    </ul>
+                    <div class="program__result">
+                      <p>
+                        РЕЗУЛЬТАТ:
+                        Вы узнаете, как создать образ успешного мужчины; какие вещи обязаны быть в вашем гардеробе, а какие - обходить стороной.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="program__text">
+              ВАЖНО! Начинаем ровно в 20:00. Финал занятия 21:00-21:15
+            </div>
+            <div class="program__btn">
+              <a href="#" class="button">принять участие в Интенсиве</a>
             </div>
           </div>
         </div>
