Закончил разметку десктопа

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/style.css">
-
-    <title>Hello, world!</title>
+    <title>Style</title>
   </head>
   <body>
     <header class="header">
@@ -116,37 +115,37 @@
                 <div class="row">
                   <div class="col-lg-6">
                     <div class="problems__item">
-                      <i class="icon"></i>
+                      <i class="icon girl"></i>
                       <p class="problems__text">Девушки не обращают желаемого внимания на вас</p>
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="problems__item">
-                      <i class="icon"></i>
+                      <i class="icon man"></i>
                       <p class="problems__text">Шопинг в тягость и не приносит удовольствия</p>
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="problems__item">
-                      <i class="icon"></i>
+                      <i class="icon many"></i>
                       <p class="problems__text">Тратите деньги на одежду и не носите ее</p>
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="problems__item">
-                      <i class="icon"></i>
+                      <i class="icon hand"></i>
                       <p class="problems__text">Ваша одежда даёт противоположный эффект на встречах  </p>
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="problems__item">
-                      <i class="icon"></i>
+                      <i class="icon time"></i>
                       <p class="problems__text">Не хватает времени на походы по магазинам</p>
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="problems__item">
-                      <i class="icon"></i>
+                      <i class="icon shirt"></i>
                       <p class="problems__text">Не знаете, как правильно подобрать и сочетать одежду</p>
                     </div>
                   </div>
@@ -159,19 +158,19 @@
     <section class="check-list">
       <div class="container">
         <div class="row">
-          <div class="col-lg-11 offset-lg-1">
+          <div class="col-lg-11 offset-lg-1 center">
+            <h2 class="center break check-list__title">
+              Перед началом интенсива - настоятельно
+              <span class="yellow-text">рекомендую изучить мой чек лист</span>
+            </h2>
             <div class="row">
-              <h2 class="center">
-                Перед началом интенсива - настоятельно
-                <span class="yellow-text">рекомендую изучить мой чек лист</span>
-              </h2>
               <div class="row">
                 <div class="col-lg-4">
-                  <img src="img/book.png" alt="book">
+                  <div class="check-list__book"></div>
                 </div>
-                <div class="col-lg-6">
-                  <p>"9 проблем в создании СТИЛЬНОГО мужского образа, КОТОРЫЕ до сих пор отталкивают от вас людей"</p>
-                  <ul>
+                <div class="col-lg-6 offset-lg-1">
+                  <p class="check-list__text">"9 проблем в создании СТИЛЬНОГО мужского образа, КОТОРЫЕ до сих пор отталкивают от вас людей"</p>
+                  <ul class="check-list__list">
                     <li>Я не сторонник раздавать свой материал БЕСПЛАТНО. Но подарив чек лист вам - мы сэкономим время в прямом эфире.</li>
                     <li>PDF чек лист - я отдаю вам бесплатно, чтобы в прямом эфире на это не уделять время.</li>
                   </ul>
@@ -190,41 +189,43 @@
       <div class="result__dark"></div>
       <div class="container">
         <div class="row">
-          <div class="col-lg-11 offset-lg-1">
-            <div class="row">
-              <h2 class="center white-text">
-                Результат после <span class="yellow-text">прохождения интенсива</span>
-              </h2>
-              <div class="row">
-                <div class="col-lg-6">
+          <div class="col-lg-11 offset-lg-1 center">
+            <h2 class=" white-text result__title">
+              Результат после <span class="yellow-text">прохождения интенсива</span>
+            </h2>
+              <div class="row justify-content-around">
+                <div class="col-lg-5">
                   <div class="result__item white-text">
-                    <p>Освоите базовые принципы стиля, комбинирования одежды,
+                    <i class="icon result__icon daw"></i>
+                    <p class="result__text">Освоите базовые принципы стиля, комбинирования одежды,
                       подбора аксессуаров</p>
                   </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-5">
                   <div class="result__item white-text">
-                    <p>Узнаете как привлекать с первых
+                    <i class="icon result__icon daw"></i>
+                    <p class="result__text">Узнаете как привлекать с первых
                       секунд внимание и интерес у женщин
                       своим внешним видом</p>
                   </div>
                 </div>
-                <div class="col-lg-6">
-                  <div class="result__item white-text">
-                    <p>Узнаете как вызывать расположение
+                <div class="col-lg-5">
+                  <div class="result__item white-text margin-b">
+                    <i class="icon result__icon daw"></i>
+                    <p class="result__text">Узнаете как вызывать расположение
                       и уважение партнёров, коллег и друзей
                       своим внешним видом</p>
                   </div>
                 </div>
-                <div class="col-lg-6">
-                  <div class="result__item white-text">
-                    <p>Научитесь грамотно подбирать
+                <div class="col-lg-5">
+                  <div class="result__item white-text margin-b">
+                    <i class="icon result__icon daw"></i>
+                    <p class="result__text">Научитесь грамотно подбирать
                       вещи под себя и при этом не выходить
                       за рамки бюджета.  </p>
                   </div>
                 </div>
               </div>
-            </div>
           </div>
         </div>
       </div>
@@ -232,24 +233,24 @@
     <section class="interest">
       <div class="container">
         <div class="row">
-          <div class="col-lg-11 offset-lg-1">
+          <div class="col-lg-11 offset-lg-1 center">
+            <h2 class="interest__title">Кому интенсив будет <span class="yellow-text">не интересен?</span></h2>
             <div class="row">
-              <h2 class="center">Кому интенсив будет <span class="yellow-text">не интересен?</span></h2>
                 <div class="col-lg-12">
                   <div class="interest__item">
                     <div class="interest__desc"><p>Если Вы
                       старше 45</p>
-                      <i class="icon interest__icon"></i>
+                      <i class="icon interest__icon man1"></i>
                     </div>
                     <p class="interest__text">Если вы предприниматель, собственник или топ менеджер и вам больше 45, то Вам интенсив будет полезен со стороны изучения основ и базовых элементов. Для создания конкретных образов - я работаю индивидуально. Вы можете написать мне на почту.</p>
                   </div>
                 </div>
-                <div class="col-lg-12">
+                <div class="col-lg-11">
                   <div class="interest__item">
                     <div class="interest__desc"><p>Вы стилист и
                       сами знаете
                       как надо :)</p>
-                      <i class="icon interest__icon"></i>
+                      <i class="icon interest__icon man2"></i>
                     </div>
                     <p class="interest__text">В этом случае, интенсив будет полезен Вам с точки зрения получения нового опыта. Я сам регулярно слежу за своими коллегами для расширения своего видения.</p>
                   </div>
@@ -258,7 +259,7 @@
                   <div class="interest__item">
                     <div class="interest__desc"><p>Вы фрик. Вы так
                       самовыражаетесь</p>
-                      <i class="icon interest__icon"></i>
+                      <i class="icon interest__icon man3"></i>
                     </div>
                     <p class="interest__text">И имеете полное право на это. Но мое личное мнение - одежда для мужчины это просто фон его личностным качествам и поступкам. Важно, чтобы фон был хороший. При создании уникальных стилий - нужно применять другие правила. На интенсиве мы будем говорить о стииле со вкусом, но не о создании УНИКАЛЬНЫХ и ЭПАТАЖНЫХ ОБРАЗОВ.</p>
                   </div>
@@ -271,8 +272,8 @@
     <section class="program">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12">
-            <h2 class="center">Что будет на Интенсиве?
+          <div class="col-lg-12 center">
+            <h2 class="center program__title">Что будет на Интенсиве?
               <span class="yellow-text uppercase">программа</span>
             </h2>
             <div class="row">
@@ -280,14 +281,14 @@
                 <div class="program__item">
                   <div class="program__date">День 1 / <span class="yellow-text">5 ноября</span></div>
                   <div class="program__timing-wrap">
-                    <div class="program__timing">Тайминг: 1 час</div>
-                    <ul>
+                    <div class="program__timing"><span>Тайминг: 1 час </span><i class="icon-clock"></i></div>
+                    <ul class="program__list">
                       <li>Постановка целей в образе под вашу ситуацию</li>
                       <li>Образ успешного мужчины. Какие составляющие?</li>
                       <li>Главные враги стиля: СМИ и магазины. На что ориентироваться?</li>
                     </ul>
                     <div class="program__result">
-                      <p>
+                      <p class="break">
                         РЕЗУЛЬТАТ:
                         Вы узнаете, как создать образ успешного мужчины; какие вещи обязаны быть в вашем гардеробе, а какие - обходить стороной.
                       </p>
@@ -297,16 +298,16 @@
               </div>
               <div class="col-lg-4">
                 <div class="program__item">
-                  <div class="program__date">День 1 / <span class="yellow-text">5 ноября</span></div>
+                  <div class="program__date">День 2 / <span class="yellow-text">5 ноября</span></div>
                   <div class="program__timing-wrap">
-                    <div class="program__timing">Тайминг: 1 час</div>
-                    <ul>
+                    <div class="program__timing"><span>Тайминг: 1 час </span><i class="icon-clock"></i></div>
+                    <ul class="program__list">
                       <li>Постановка целей в образе под вашу ситуацию</li>
                       <li>Образ успешного мужчины. Какие составляющие?</li>
                       <li>Главные враги стиля: СМИ и магазины. На что ориентироваться?</li>
                     </ul>
                     <div class="program__result">
-                      <p>
+                      <p class="break">
                         РЕЗУЛЬТАТ:
                         Вы узнаете, как создать образ успешного мужчины; какие вещи обязаны быть в вашем гардеробе, а какие - обходить стороной.
                       </p>
@@ -316,16 +317,16 @@
               </div>
               <div class="col-lg-4">
                 <div class="program__item">
-                  <div class="program__date">День 1 / <span class="yellow-text">5 ноября</span></div>
+                  <div class="program__date">День 3 / <span class="yellow-text">5 ноября</span></div>
                   <div class="program__timing-wrap">
-                    <div class="program__timing">Тайминг: 1 час</div>
-                    <ul>
+                    <div class="program__timing"><span>Тайминг: 1 час </span><i class="icon-clock"></i></div>
+                    <ul class="program__list">
                       <li>Постановка целей в образе под вашу ситуацию</li>
                       <li>Образ успешного мужчины. Какие составляющие?</li>
                       <li>Главные враги стиля: СМИ и магазины. На что ориентироваться?</li>
                     </ul>
                     <div class="program__result">
-                      <p>
+                      <p class="break">
                         РЕЗУЛЬТАТ:
                         Вы узнаете, как создать образ успешного мужчины; какие вещи обязаны быть в вашем гардеробе, а какие - обходить стороной.
                       </p>
@@ -335,7 +336,7 @@
               </div>
             </div>
             <div class="program__text">
-              ВАЖНО! Начинаем ровно в 20:00. Финал занятия 21:00-21:15
+              <span>ВАЖНО!</span> Начинаем ровно в 20:00. Финал занятия 21:00-21:15
             </div>
             <div class="program__btn">
               <a href="#" class="button">принять участие в Интенсиве</a>
@@ -344,6 +345,89 @@
         </div>
       </div>
     </section>
+    <section class="acquaintance">
+      <div class="acquaintance__grad"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="row">
+              <div class="col-lg-6">
+                <div class="acquaintance__block">
+                  <h2 class="acquaintance__title">Кто я? <span class="yellow-text">Знакомимся</span></h2>
+                  <div class="acquaintance__text">
+                    <p>Меня зовут Владислав Бейлис и я мужской стилист.
+                      Чем я могу быть полезен Вам?</p>
+                    <ul class="acquaintance__list">
+                      <li>Обучаю навыку стильно выглядеть и работаю над внешним видом;</li>
+                      <li>Провожу индивидуальные консультации;</li>
+                      <li>Помогаю с созданием персонального образа для социальных сетей.</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="experience">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-11 offset-lg-1 center">
+            <h2 class="center break">
+              Лучшее доказательство моей экспертности -
+              <span class="yellow-text">это Ваш опыт работы со мной</span>
+            </h2>
+            <p class="experience__text">А пока можете познакомиться с опытом моих учеников</p>
+            <div class="row justify-content-around">
+              <div class="col-lg-3">
+                <div class="experience__photo user1"></div>
+              </div>
+              <div class="col-lg-3">
+                <div class="experience__photo user2"></div>
+              </div>
+              <div class="col-lg-3">
+                <div class="experience__photo user3"></div>
+              </div>
+            </div>
+            <div class="experience__btn">
+              <a href="#" class="button break">перейти к созданию
+                своего образа</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="resume">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-11 offset-lg-1 center">
+            <h2 class="resume__title">
+              <span class="yellow-text">РЕЗЮМЕ:</span> что Вы получите, а чего не будет?
+            </h2>
+            <p class="resume__text">Давайте еще раз пройдемся по темам, которые мы разберем на интенсиве в прямом эфире:
+              А также о том, о чем мы будем говорить, но НЕ РАЗБЕРЕМ ПОЛНОЦЕННО.</p>
+            <div class="offset-lg-1">
+              <ul class="resume__list">
+                <li>это создание уникального эпатажного образа, чтобы у нас с вами было общее понимание, возьмем на примере личность Гарик Корогодский и (рос эпатажную личность взять) - это уникальный и эпатажны образ. - Мы же разберем то, как правильрно подбирать одежду, цвета и выглядеть стильно и одетым со вкусом. При соблюдении этих параметров Вы уже будете выделятся среди окружающих.</li>
+                <li>создание образа для мужчин в возрасте (подругому сформулирую) - конкретно с этой задачей мы работать на интенсиве не будем. НО, я построил программу интенсива так, что он будет достаточно емким. На нем мы затронем базовые темы сочетания одежды, которые понадобятся вам. Но работать с вашей задачей мы сможем на программе (название платной программы)</li>
+              </ul>
+            </div>
+            <p class="resume__text-big">До встречи на интенсиве!</p>
+            <div class="resume__btn">
+              <a href="#" class="button">принять участие</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer__block">
+        <p class="footer__text">Мы работаем официально и согласно всем соответствующим законам РФ.
+          ИП Автор  /  ОГРН 000000000000000</p>
+        <a href="#" class="footer__link">Политика конфиденциальности и согласия с рассылкой</a>
+      </div>
+    </footer>
 
 
 
