Закончил разметку десктопа2

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <hr>
                 <p class="header__description white-text">Как создать индивидуальный стиль, подчеркнуть свои достоинства и создавать А*уенное первое впечатление Превосходное, Потрясающее, Шикарное, Безупречное</p>
               </div>
-              <div class="col-lg-4"></div>
+              <div class="col-lg-3"></div>
             </div>
           </div>
         </div>
@@ -30,7 +30,7 @@
               <div class="row">
                 <div class="col-lg-12">
                   <p class="right black-text header__days">3-х дневный мужской интенсив</p>
-                  <h2 class="center">Как создать свой стильный образ<br><span class="white-text">привлекательного и успешного мужчины</span></h2>
+                  <h2 class="header__title center">Как создать свой стильный образ<br><span class="white-text">привлекательного и успешного мужчины</span></h2>
                   <hr style="max-width: 80%; margin-left: auto; margin-right: auto;">
                   <p class="center header__text">научись создавать свой собственный образ БЕЗ привлечения стилиста, и траты 10-ки часов на выбор одежды</p>
                 </div>
@@ -175,7 +175,7 @@
                     <li>PDF чек лист - я отдаю вам бесплатно, чтобы в прямом эфире на это не уделять время.</li>
                   </ul>
                   <div class="check-list__btn">
-                    <a href="#" class="button check-list__button">скачать PDF и
+                    <a href="#" class="button check-list__button litle">скачать PDF и
                       зарегистрироваться на интенсив</a>
                   </div>
                 </div>
@@ -374,7 +374,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-11 offset-lg-1 center">
-            <h2 class="center break">
+            <h2 class="experience__title center break">
               Лучшее доказательство моей экспертности -
               <span class="yellow-text">это Ваш опыт работы со мной</span>
             </h2>
@@ -391,7 +391,7 @@
               </div>
             </div>
             <div class="experience__btn">
-              <a href="#" class="button break">перейти к созданию
+              <a href="#" class="button break big">перейти к созданию
                 своего образа</a>
             </div>
           </div>
@@ -415,7 +415,7 @@
             </div>
             <p class="resume__text-big">До встречи на интенсиве!</p>
             <div class="resume__btn">
-              <a href="#" class="button">принять участие</a>
+              <a href="#" class="button resume__button text-white">принять участие</a>
             </div>
           </div>
         </div>
